Allow for going to detail at non-default
